# fluxbalancer-evaluation

./: pyproject.toml  tes.json
src/: compare_experiments.py  diagrams.ipynb  eval.ipynb  eval_v2.ipynb  main.py  statistics_balancer.py  test.txt
src/analyze/: analyze_group.ipynb  diagrams_with_latency.ipynb  eval.ipynb  eval_v2.ipynb  eval_v3.ipynb
src/assets/distributed/: topsis.json
src/assets/experiments/balancer/: electre_hedged_first_entropy.json
src/assets/experiments/haproxy__1-4_secs/: haproxy_leastconn.json  haproxy_random.json  haproxy_roundrobin.json
src/assets/experiments_auto_10_03_2026__19_51/balancer/: saw.json
src/assets/experiments_old/haproxy__1-4_secs/: haproxy_leastconn.json  haproxy_roundrobin.json
src/experiment_runner/: client.py  config.py  experiment.py  loadgen.py  models.py  orchestrator.py  storage.py  summary.py  utils.py  workload_plan.py
src/experiments/: airm_hedged_first_entropy.json  airm_speculative_first_entropy.json
src/experiments/balancer/: airm_hedged_first_entropy.json  lc_hedged_first_entropy.json  saw_hedged_first_entropy.json
src/experiments/other/no_adaptive/: electre_speculative_first_entropy_v2.json
src/experiments/other/with_adaptive/: electre_speculative_first_entropy_v2.json
src/experiments/replications/no_adaptive/: airm_hedged_first_entropy.json
src/experiments/replications/with_adaptive/: electre_hedged_first_entropy.json  electre_speculative_first_entropy.json  (+1 more)
src/experiments_auto_10_03_2026__19_51/balancer/: airm.json  electre.json  lc.json  topsis.json
(+521 files in other folders)
